@startuml

title __DEMOOCPCHOCOLATEMANAGER's Class Diagram__\n


    namespace om.example.ocp.demoocpchocolatemanager {
      namespace machine {
        class com.example.ocp.demoocpchocolatemanager.machine.BasicChocolateMachine {
            + brewChocolate()
            + brewMilkChocolate()
            + brewWhiteChocolate()
        }
      }
    }




    namespace om.example.ocp.demoocpchocolatemanager {
      namespace machine {
        interface com.example.ocp.demoocpchocolatemanager.machine.ChocolateMachine {
            {abstract} + brewChocolate()
        }
      }
    }




    namespace om.example.ocp.demoocpchocolatemanager {
      namespace machine {
        class com.example.ocp.demoocpchocolatemanager.machine.PremiumChocolateMachine {
            + brewChocolate()
            + brewCocoaChocolate()
            + brewDarkChocolate()
        }
      }
    }



  com.example.ocp.demoocpchocolatemanager.machine.BasicChocolateMachine .up.|> com.example.ocp.demoocpchocolatemanager.machine.ChocolateMachine
  com.example.ocp.demoocpchocolatemanager.machine.PremiumChocolateMachine .up.|> com.example.ocp.demoocpchocolatemanager.machine.ChocolateMachine


    namespace om.example.ocp.demoocpchocolatemanager {
      namespace manager {
        class com.example.ocp.demoocpchocolatemanager.manager.ChocolateManager {
            {static} - SERVICE_NAME_SUFFIX : String
            - beanFactory : BeanFactory
            + brewChocolate()
        }
      }
    }



  com.example.ocp.demoocpchocolatemanager.manager.ChocolateManager o-- com.example.ocp.demoocpchocolatemanager.machine.ChocolateMachine : chocolateMachine

    namespace om.example.ocp.demoocpchocolatemanager {
      namespace model {
        class com.example.ocp.demoocpchocolatemanager.model.Chocolate {
            - description : String
            + Chocolate()
            + equals()
            + getDescription()
            + hashCode()
            + setDescription()
            + toString()
            # canEqual()
        }
      }
    }








    namespace om.example.ocp.demoocpchocolatemanager {
      namespace model {
        enum ChocolateCategory {
          BASIC
          PREMIUM
          identifier
        }
      }
    }




    namespace om.example.ocp.demoocpchocolatemanager {
      namespace model {
        enum ChocolateSelection {
          COCOA_CHOCOLATE
          DARK_CHOCOLATE
          MILK_CHOCOLATE
          WHITE_CHOCOLATE
        }
      }
    }


    namespace om.example.ocp.demoocpchocolatemanager {
      namespace resource {
        class com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest {
            + ChocolateRequest()
            + ChocolateRequest()
            + equals()
            + getChocolateCategory()
            + getChocolateSelection()
            + hashCode()
            + setChocolateCategory()
            + setChocolateSelection()
            + toString()
            # canEqual()
        }
      }
    }





    namespace om.example.ocp.demoocpchocolatemanager {
      namespace resource {
        class com.example.ocp.demoocpchocolatemanager.resource.ChocolateResponse {
            + ChocolateResponse()
            + equals()
            + getChocolate()
            + hashCode()
            + setChocolate()
            + toString()
            # canEqual()
        }
      }
    }



  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest o-- com.example.ocp.demoocpchocolatemanager.model.ChocolateCategory : chocolateCategory
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateRequest o-- com.example.ocp.demoocpchocolatemanager.model.ChocolateSelection : chocolateSelection
  com.example.ocp.demoocpchocolatemanager.resource.ChocolateResponse o-- com.example.ocp.demoocpchocolatemanager.model.Chocolate : chocolate
    namespace om.example.ocp.demoocpchocolatemanager {
      namespace webservice {
        class com.example.ocp.demoocpchocolatemanager.webservice.ChocolateController {
            + brewChocolate()
        }
      }
    }



  com.example.ocp.demoocpchocolatemanager.webservice.ChocolateController o-- com.example.ocp.demoocpchocolatemanager.manager.ChocolateManager : chocolateManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
